16 - fixing alignment of sort options

--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -2,6 +2,8 @@
   background: $grey;
   width: 30%;
   max-width: 300px;
+  float: left;
+  display: inline-block;
 }
 
 .inside {
@@ -60,7 +62,55 @@ select {
 }
 
 #listings {
+  width:70%;
+  float: left;
+  display: inline-block;
+  padding: 15px;
+  background: $offwhite;
 
+  .search-area {
+    input[type="text"] {
+      width: 70%;
+      background: transparent;
+      font-size: 2rem;
+      border: none;
+      border-bottom: 1px solid $darkgrey;
+      margin-bottom: 20px;
+      color: $lightgrey;
+    }
+  }
+
+
+  .sortby-area {
+    margin-bottom: 20px;
+    .results {
+      color: $lightgrey;
+      font-size: 0.8rem;
+      display: inline-block;
+    }
+    .sort-options {
+      float: right;
+
+      select {
+        font-size: 0.9rem;
+        font-weight: 300;
+        border: 1px solid $lightgrey;
+        background: transparent;
+        padding: 20px;
+        display: inline-block;
+        margin-right: 15px;
+      }
+
+      .view {
+        display: inline-block;
+        .fa {
+          font-size: 1.5rem;
+        }
+
+      }
+
+    }
+  }
 }
 
 
